Fix wrapper reparenting to work with splitwindow... Bug 318678, r+sr=jst